--- a/templates/partials/regform.individual.existingplayer.html
+++ b/templates/partials/regform.individual.existingplayer.html
@@ -2,13 +2,13 @@
 	  role="form" 
 	  ng-submit="regform.playerType='existing'; register(regform)">
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Søk på navn:</label>
+		<label class="col-sm-2 control-label">{{'REG.FIELD.SEARCH_NAME' | translate}}:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" ng-model="regform.ithfNamequery" id="namesearch" placeholder="Spillernavn" />
+			<input type="text" class="form-control" ng-model="regform.ithfNamequery" id="namesearch" placeholder="{{'REG.HELPER.PLAYERNAME' | translate}}" />
 		</div>
 	</div>
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Velg ITHF spiller:</label>
+		<label class="col-sm-2 control-label">{{'REG.FIELD.CHOOSE_ITHF' | translate}}:</label>
 		<div class="col-sm-10">
 			<select 
 				id="selectbox" 
@@ -26,6 +26,6 @@
 			<button type="submit" 
 					ng-show="regform.player && regform.subtournament" 
 					class="btn btn-lg btn-success center-block">
-					Registrer som {{regform.player.player}}</button>
+					{{'REG.BTN.REGISTER_AS' | translate}} {{regform.player.player}}</button>
 	</div>
 </form>
