--- a/templates/tournament.info.html
+++ b/templates/tournament.info.html
@@ -8,19 +8,15 @@
 	<div class="col-xs-10 col-md-10">
 		<table class="table">
 			<tr>
-				<td>Dato:</td>
+				<td>{{'INFO.DATE' | translate}}:</td>
 				<td>{{tournament.date | prettyprintDatestamp}}</td>
 			</tr>
-			<!-- <tr>
-				<td>Dager igjen:</td>
-				<td>{{tournament.date | daysUntil}}</td>
-			</tr> -->
 			<tr>
-				<td>Sted:</td>
+				<td>{{'INFO.LOCATION' | translate}}:</td>
 				<td ng-bind-html="trustHtml(tournament.venue)"></td>
 			</tr>
 			<tr>
-				<td>Deltakeravgift:</td>
+				<td>{{'INFO.REGISTRATION_FEE' | translate}}:</td>
 				<td ng-bind-html="trustHtml(tournament.fee)"></td>
 			</tr>
 			<tr ng-repeat="misc in tournament.misc">
@@ -28,7 +24,7 @@
 				<td ng-bind-html="trustHtml(misc.value)"></td>
 			</tr>
 			<tr>
-				<td>Kontaktperson:</td>
+				<td>{{'INFO.CONTACT' | translate}}:</td>
 				<td ng-bind-html="trustHtml(tournament.contact)"></td>
 			</tr>
 		</table>
@@ -38,7 +34,7 @@
 <div class="row">
 	<div class="col-md-10" ng-repeat="section in tournament.details">
 		<h3>{{section.title}}</h3>
-		<div ng-bind-html="trustHtml(section.content)"></div>
+		<div class="tournament-info" ng-bind-html="trustHtml(section.content)"></div>
 	</div>
 </div>
 		
